package ar.edu.davinci.domain;

public enum TipoInsumo {

	PERIFERICO, HARDWARE, LIMPIEZA;
}
